Added missing fiels from  quota and cache example
